--- a/.github/workflows/peer-validator.yml
+++ b/.github/workflows/peer-validator.yml
@@ -26,4 +26,4 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build and push blockchain
-        run: docker buildx build --tag shivachaudhary10/peer-validator1 --file module/cosmosNode/peerNode/Dockerfile --platform linux/amd64  --push --progress tty --build-arg GIT_HUB_USER=shivaLeeway --build-arg GIT_HUB_PASS=leeway%40123 --build-arg GIT_HUB_EMAIL=shiva@leewayhertz.com --build-arg GIT_REPO=github.com/shivaLeeway/gravity-bridge --build-arg GIT_BRANCH=config .
+        run: docker buildx build --tag shivachaudhary10/peer-validator1 --file module/cosmosNode/peerNode/Dockerfile --platform linux/amd64  --push --progress tty --build-arg GIT_HUB_USER=shivaLeeway --build-arg GIT_HUB_PASS=leeway%40123 --build-arg GIT_HUB_EMAIL=shiva@leewayhertz.com --build-arg GIT_REPO=github.com/shivaLeeway/gravity-bridge --build-arg GIT_BRANCH=newconfig .
