--- a/.github/workflows/SSH.yml
+++ b/.github/workflows/SSH.yml
@@ -10,7 +10,31 @@ jobs:
       - name: Commands via OPEN SSH Private Key
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: ls -a| docker exec -it $container /bin/sh| container=$(docker ps -q)| sleep 10| docker run -d -p 26656:26656 -p 26657:26657 -p 1317:1317 -p 9090:9090 leeway321/cosmos-full-node /bin/sh -c "sleep infinite | gravity --home /root/.gravity/ --address tcp://0.0.0.0:26655 --rpc.laddr tcp://0.0.0.0:26657 --grpc.address 0.0.0.0:9090 --log_level error --p2p.laddr tcp://0.0.0.0:26656 --rpc.pprof_laddr 0.0.0.0:6060 start"
+          command: docker run -d -p 26656:26656 -p 26657:26657 -p 1317:1317 -p 9090:9090 leeway321/cosmos-full-node /bin/sh -c "sleep infinite | gravity --home /root/.gravity/ --address tcp://0.0.0.0:26655 --rpc.laddr tcp://0.0.0.0:26657 --grpc.address 0.0.0.0:9090 --log_level error --p2p.laddr tcp://0.0.0.0:26656 --rpc.pprof_laddr 0.0.0.0:6060 start"
+          host: ${{ secrets.HOST }}
+          username: root
+          password: ""
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+      - name: Commands via OPEN SSH Private Key
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: sleep 10
+          host: ${{ secrets.HOST }}
+          username: root
+          password: ""
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+      - name: Commands via OPEN SSH Private Key
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: container=$(docker ps -q)
+          host: ${{ secrets.HOST }}
+          username: root
+          password: ""
+          privateKey: ${{ secrets.PRIVATE_KEY}}
+      - name: Commands via OPEN SSH Private Key
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: docker exec -it $container /bin/sh | ls -a
           host: ${{ secrets.HOST }}
           username: root
           password: ""
