--- a/.github/workflows/SSH.yml
+++ b/.github/workflows/SSH.yml
@@ -7,18 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/ONET-44'
     steps:
-      - name: clone gravity-bridge folder in machine
+      - name: start full node
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: git clone -b ONET-44 https://github.com/shivaLeeway/gravity-bridge
-          host: ${{ secrets.HOST }}
-          username: root
-          password: ""
-          privateKey: ${{ secrets.PRIVATE_KEY}}
-      - name: Run run.sh file
-        uses: garygrossgarten/github-action-ssh@release
-        with:
-          command: bash gravity-bridge/module/ssh/run.sh
+          command: docker run -d -p 26656:26656 -p 26657:26657 -p 1317:1317 -p 9090:9090 leeway321/cosmos-full-node /bin/sh -c "sleep infinite | gravity --home /root/.gravity/ --address tcp://0.0.0.0:26655 --rpc.laddr tcp://0.0.0.0:26657 --grpc.address 0.0.0.0:9090 --log_level error --p2p.laddr tcp://0.0.0.0:26656 --rpc.pprof_laddr 0.0.0.0:6060 start | sh module/cosmosNode/fullNode/start.sh 2>&1 >/dev/null"
           host: ${{ secrets.HOST }}
           username: root
           password: ""
